<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".RequestFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="45sp"
            >
            <View
                android:id="@+id/bg_view"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@drawable/bg_view"
                app:layout_constraintBottom_toTopOf="@id/cardView"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="32dp"
                app:cardCornerRadius="16sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"

                >

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30sp"
                    >

                    <TextView
                        android:id="@+id/textHi"
                        android:layout_width="0sp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:layout_marginStart="30sp"
                        android:layout_marginEnd="30sp"
                        android:text="@string/hi"
                        android:textColor="@color/primaryColor"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textPendahuluan"
                        android:layout_width="0sp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:layout_marginEnd="30sp"
                        android:layout_marginTop="8dp"
                        android:maxLines="3"
                        android:text="@string/pendahuluan"
                        android:textAlignment="gravity"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textHi" />

                    <TextView
                        android:id="@+id/textFormat1"
                        android:layout_width="0sp"
                        android:layout_height="wrap_content"
                        android:padding="13sp"
                        android:layout_marginStart="30dp"
                        android:layout_marginEnd="30sp"
                        android:layout_marginTop="20dp"
                        android:maxLines="3"
                        android:text="@string/format1"
                        android:textAlignment="gravity"
                        android:background="@drawable/menu_bg_color_rounded"
                        android:textColor="@color/white"
                        android:clickable="true"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textPendahuluan"
                        android:focusable="true" />

                    <TextView
                        android:id="@+id/textFormat2"
                        android:layout_width="0sp"
                        android:layout_height="wrap_content"
                        android:padding="13sp"
                        android:layout_marginStart="30dp"
                        android:layout_marginEnd="30sp"
                        android:layout_marginTop="20dp"
                        android:maxLines="3"
                        android:text="@string/format2"
                        android:textAlignment="gravity"
                        android:background="@drawable/menu_bg_color_rounded"
                        android:textColor="@color/white"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textFormat1"/>

                    <TextView
                        android:id="@+id/textFormat3"
                        android:layout_width="0sp"
                        android:layout_height="wrap_content"
                        android:padding="13sp"
                        android:layout_marginStart="30dp"
                        android:layout_marginEnd="30sp"
                        android:layout_marginTop="20dp"
                        android:maxLines="3"
                        android:text="@string/format3"
                        android:textAlignment="gravity"
                        android:background="@drawable/menu_bg_color_rounded"
                        android:textColor="@color/white"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textFormat2"/>

                    <TextView
                        android:id="@+id/textFormat4"
                        android:layout_width="0sp"
                        android:layout_height="wrap_content"
                        android:padding="13sp"
                        android:layout_marginStart="30dp"
                        android:layout_marginEnd="30sp"
                        android:layout_marginTop="20dp"
                        android:maxLines="3"
                        android:text="@string/format4"
                        android:textAlignment="gravity"
                        android:background="@drawable/menu_bg_color_rounded"
                        android:textColor="@color/white"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textFormat3"/>

                    <TextView
                        android:id="@+id/textPenutup"
                        android:layout_width="0sp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:layout_marginEnd="30sp"
                        android:layout_marginTop="20dp"
                        android:maxLines="7"
                        android:text="@string/penutup"
                        android:textAlignment="gravity"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textFormat4"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>


        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>




</androidx.constraintlayout.widget.ConstraintLayout>