<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".AboutFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="45sp"
            >
            <View
                android:id="@+id/bg_view"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@drawable/bg_view"
                app:layout_constraintBottom_toTopOf="@id/cardView"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="32dp"
                app:cardCornerRadius="16sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:scrollbars="horizontal"

                >

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="58sp"
                    >
                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="200sp"
                        android:layout_height="150sp"
                        android:layout_marginTop="50dp"
                        android:src="@drawable/logonew"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.497"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="0sp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:layout_marginStart="40sp"
                        android:layout_marginEnd="40sp"
                        android:text="KamusDB-SQL"
                        android:textColor="@color/primaryColor"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/imageView" />

                    <TextView
                        android:id="@+id/textVersion"
                        android:layout_width="0sp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="40sp"
                        android:layout_marginEnd="40sp"
                        android:text="versi 1.0.0"
                        android:textColor="@color/primaryColor"
                        android:textSize="15sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="0sp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="40dp"
                        android:layout_marginEnd="40sp"
                        android:layout_marginTop="8dp"
                        android:maxLines="4"
                        android:text="@string/desc_app"
                        android:textAlignment="gravity"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textVersion" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="0sp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="40sp"
                        android:layout_marginEnd="40sp"
                        android:layout_marginTop="25dp"
                        android:text="@string/created_by"
                        android:textColor="@color/primaryColor"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.244"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView2" />

                    <TextView
                        android:id="@+id/tv_nama"
                        android:layout_width="0sp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="40sp"
                        android:layout_marginEnd="40sp"
                        android:layout_marginTop="8dp"
                        android:text="@string/nada"
                        android:textSize="14sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView3" />

                    <TextView
                        android:id="@+id/tv_nim"
                        android:layout_width="0sp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="40sp"
                        android:layout_marginEnd="40sp"
                        android:text="NIM 18520244013"
                        android:textSize="14sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_nama" />

                    <TextView
                        android:id="@+id/tv_dosbing"
                        android:layout_width="0sp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="40sp"
                        android:layout_marginEnd="40sp"
                        android:text="Dosbing : Nurkhamid S.Si., M.Kom., Ph.D."
                        android:textSize="14sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_nim" />

                    <TextView
                        android:id="@+id/tv_prodi"
                        android:layout_width="0sp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="40sp"
                        android:layout_marginEnd="40sp"
                        android:text="Prodi Pendidikan Teknik Informatika"
                        android:textSize="14sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_dosbing" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_prodi"
                        android:layout_marginTop="48sp"
                        android:orientation="horizontal"
                        android:gravity="center"
                        >

                        <ImageView
                            android:layout_width="20sp"
                            android:layout_height="20sp"
                            android:src="@drawable/ic_copyright"
                            android:layout_gravity="center_vertical"

                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="14sp"
                            android:textColor="@color/primaryColor"
                            android:layout_gravity="center_vertical"
                            android:text="2021. Universitas Negeri Yogyakarta"/>


                    </LinearLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>





</androidx.constraintlayout.widget.ConstraintLayout>